fix for problem with viewport height on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,7 @@ html {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     margin: 0;
     padding: 0;
-    /* mobile viewport bug fix */
-    height: -webkit-fill-available;
+    height: auto;
 }
 
 body {
